# sr.ht

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Makefile  Procfile  README.md  alembic.ini.example  app.py  authserver.py  cli_admin.py  config.ini.example  debug.py  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  download_models.py  env.dev.example  fly.toml  key  manage.py  pyproject.toml  requirements.txt  robots.txt  setup.py  tailwind.config.js  todo.txt
.github/workflows/: fly.yml
alembic/: env.py
alembic/versions/: 1371a0c98ad_initial_database_schema.py  168d21856e_add_approval_date.py  230feeb5b86_add_upload_table.py  2a2cb310c7f_add_tox_ids.py  2c27bce164d_add_oauth_tables.py  2fdfac8b918_add_upload_path.py  3a704a54392_add_rejected_column.py  3dd77b90f3b_fix_tox_ids.py  470b162dcd9_add_creation_date_and_original_name_to_.py  4c34ca870e0_add_non_nullable_to_uploads.py  5750db1d643_added_hide_option_to_uploads_table.py  d84cd253a05b_removed_oauth_and_toxid_integrations.py
contrib/: authserver.py  tox-dns.py
cronsetup/: install_task_timers.sh
db_schema/: srht_schema_updates.sql  srhtschema.sql
db_schema/updates/: 000_create_jobtype_table.sql  002_add_job_log_table.sql  003_add_job_metadata_json.sql  004_add_job_version.sql  005_replace_approval_with_suspended.sql  006_add_job_created.sql  007_add_job_claim_metadata_and_status_index.sql  008_add_tags_table.sql  009_add_caption_column.sql  010_add_upload_tag_fts.sql  011_add_tag_relevance.sql  012_rebuild_upload_fts_with_filename.sql  013_add_user_ai_opt_in.sql  014_add_task_schedule_table.sql  015_add_upload_caption_complete.sql  add_thumbnail_and_alter_shorthash.sql  create_messages_table.sql
emails/: invite  new_request  reject  reset
init/: init-db.sh  srht.schema
nginx/: basic.conf  nginx.conf  u.pste.pw.conf
scripts/: admin_uploads.js  app_bootstrap.js  approve.js  delete.js  index.js  search.js  theme.js  theme_bootstrap.js  uploads_filters.js
srht/: admin_auth.py  app.py  common.py  config.py  database.py  email.py  limiter.py  objects.py  task_queue.py
srht/blueprints/: admin.py  (+4 more)
styles/: main.css  main.scss
systemd/: srht.service  srht.socket
templates/: _index_member_content.html  _uploads_content.html  _uploads_pagination.html  admin_login.html  admin_uploads.html  approvals.html  change.html  donate.html  forgot.html  index-about.html  index-member.html  index.html  internal_error.html  job_data.html  job_logs.html  jobs.html  layout.html  login.html  maintenance.html  new-member.html  not_found.html  notice.html  oauth-authorize.html  oauth-clients.html  oauth-tokens.html  pagination.html  pending.html  pstepw  reset.html  resources.html  script.html  script.plain.html  setup.html  sharex.html  srht  uploads.html  users.html
tests/: conftest.py  test_api.py  test_auth.py  test_htmx_admin.py
(+19 files in other folders)
