[project]
name = "filehouse"
version = "3.0.0"
description = "A simple file hosting service"
authors = [
    { name = "oranges", email = "email@oranges.net.nz" }
]
license = { text = "MIT License" }
dependencies = [
    "bcrypt",
    "Flask",
    "flask-htmx",
    "gunicorn",
    "Flask-SQLAlchemy",
    "flask-login",
    "python-dotenv",
    "pystache",
    "psycopg2-binary",
    "pillow",
    "moviepy",
    "python-magic",
    "docopt",
    "black",
    "typer>=0.25.1",
    "flask-wtf>=1.3.0",
]
requires-python = ">=3.13"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-flask",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["srht"]

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
profile = "black"
